# esp32_msc_iot

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/drivers/driver_nucleo_stts751_lis2mdl_lsm6dso/: CMakeLists.txt  Makefile  sdkconfig
components/drivers/driver_nucleo_stts751_lis2mdl_lsm6dso/main/: CMakeLists.txt  Kconfig.projbuild  component.mk  esp32_stts751_main.c
components/drivers/driver_nucleo_stts751_lis2mdl_lsm6dso/main/STTS751/: stts751_reg.c  stts751_reg.h
components/drivers/driver_rv3029/: CMakeLists.txt  m_rv3029.c  rv3029_main.c
components/drivers/driver_rv3029/include/: m_rv3029.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
